2016-06-17  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSRegularExpression.m: Implement -isEqual: and -hash
	* Tests/base/NSRegularExpression/basic.m: Test NSCopying

2016-06-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m: Fix for failure of connect() call.
	* Source/GSStream.m: Fix event handling for failed streams.
	* Tests/NSURLConnection/test01.m: Add testcases, fix reset of delegate.
	Fixes for kfreebsd network stack being clever enough to fail the
	connect() call if the remote port is on the same machine and has
	no process listening on it.  Reported by Heintzmann

2016-06-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/Base.gsdoc:
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi:
	Documentation/release notes preparation for next release.

	* Source/Makefile.postamble:
	* Source/NSBundle.m:
	* Source/NSPathUtilities.m:
	* Source/NSString.m:
	* Source/NSTask.m:
	* configure.ac:
	Changes to use the new multiarch path component cpu-host rather
	than a host subdirectory inside a cpu directory.
	* configure: Regenerate

2016-06-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m:
	Fix output conversion to 7bit to work for quoted-printable.
	Also, when generating headers, generate conventionally
	capitalised names.

2016-06-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m:
	Conversion of multipart document between base64 and binary encoding
	should use quoted-printable rather than base64 for text parts.
	Rename -convertToBase64 to be -convertTo7BitSafe instead.

2016-05-27  Niels Grewe <niels.grewe@halbordnung.de>

  	* Tools/AGSParser.m: Ignore __asm__ directives 
	
2016-05-19 Seong Gu Lee <sgleehd@gmail.com>

	* GNUmakefile:
	* Source/Additions/Makefile.preamble:
	* Source/ObjectiveC2/Makefile.preamble:
	* Source/unix/Makefile.preamble:
	* Source/win32/Makefile.preamble:
	mingw64 tweaks

2016-05-18  Richard Frith-Macdonald <rfm@gnu.org>
